Fix carousel thumbnail stretching

--- a/src/assets/styles/components/atoms/carousel-video.scss
+++ b/src/assets/styles/components/atoms/carousel-video.scss
@@ -3,6 +3,7 @@
     &__img {
       border-radius: $radius-sm;
       margin-bottom: 10px;
+      object-fit: cover;
     }
 
     &__title {
